Add footer like a render

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,21 +71,6 @@
     <div role="main" class="container FullPage">
       <%= yield %>
     </div>
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-6 col-sm-6 col-md-8 col-lg-4">
-            <p class="brand" href="#">Estratega <span>Beta</span></p>
-                <p>Estratega es una metodología de advocacy que reduce los riesgos y aumenta el desempeño de tu equipo al momento de llevar a cabo un plan estratégico para incidir en políticas públicas.</p>
-              </div>
-          <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">
-            <h5>Contact</h5>
-            <p><i class="fa fa-phone-square"></i> +56 2 2419 2770</p>
-            <p><i class="fa fa-envelope"></i> <a href="">Contacto de Prensa</a></p>
-            <p>&nbsp;<i class="fa fa-map-marker"></i>&nbsp; Holanda 895, Providencia</p>
-          </div>
-        </div>
-      </div>
-    </footer>
+       <%= render 'layouts/footer' %>
   </body>
 </html>
