--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -5,6 +5,9 @@ body {
   color: #575757;
   background-color: #f3f3f3;
   font-weight: 300;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
+  text-shadow: rgba(0,0,0,.01) 0 0 1px;
 }
 body.home {
   background-color: #ffffff;
