--- a/app/views/projects/_user_permission_modal.erb
+++ b/app/views/projects/_user_permission_modal.erb
@@ -1,19 +1,19 @@
 <script type="text/ng-template" id="user-permission-aside">
   <div class="modal-header">
-      <h3 class="modal-title">Share</h3>
+      <h3 class="modal-title">Compartir</h3>
   </div>
   <div class="modal-body">
     <form>
       <div class="form-group">
-        <label for="share_users">People</label>
-        <input type="text" class="form-control" name="share_users" ng-model="share.share_users" placeholder="Add email accounts sepparated by commas">
+        <label for="share_users">Añade a Personas</label>
+        <input type="text" class="form-control" name="share_users" ng-model="share.share_users" placeholder="Añade las cuentas de mail separadas por comas">
       </div>
       <div class="form-group">
-        <label for="message">Message</label>
-        <textarea class="form-control" name="message" ng-model="share.message" placeholder="Add a note"></textarea>
+        <label for="message">Mensaje</label>
+        <textarea class="form-control" name="message" ng-model="share.message" placeholder="Escribe un mensaje"></textarea>
       </div>
       <div class="form-group">
-        <label for="share">Share with</label>
+        <label for="share">Compartido con</label>
         <ul ng-repeat="member in current_project.members">
           <li>{{ member.email }}</li>
         </ul>
@@ -21,7 +21,7 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="save($event)">Save</button>
-    <button class="btn btn-warning" ng-click="cancel($event)">Cancel</button>
+    <button class="btn btn-primary" ng-click="save($event)">Compartir</button>
+    <button class="btn btn-warning" ng-click="cancel($event)">Cancelar</button>
   </div>
 </script>
