arreglo css bg .collapse.in

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -698,7 +698,7 @@ table.indicator td:first-child {
   .project-hero, .project-hero02 {
     background: #63c0d6;
   }
-  .collapse.in {
+  nav.navbar .collapse.in {
     background-color: #021b2d;
     padding-bottom: 0;
   }
