Corrección y incorporación de traducciones actividades

--- a/app/views/objectives/_modal_indicator.html.erb
+++ b/app/views/objectives/_modal_indicator.html.erb
@@ -5,11 +5,11 @@
   <div class="modal-body">
     <div class="form-group">
       <label for="owner_name"><%= t('.owner_name') %></label>
-      <input name="owner_name" class="form-control" ng-model="current_indicator.owner_name" placeholder="<%= t('.owner_name') %>">
+      <input name="owner_name" class="form-control" ng-model="current_indicator.owner_name" placeholder="<%= t('.owner_name_place') %>">
     </div>
     <div class="form-group">
       <label for="owner_role"><%= t('.owner_role') %></label>
-      <input name="owner_role" class="form-control" ng-model="current_indicator.owner_role" placeholder="<%= t('.owner_role') %>">
+      <input name="owner_role" class="form-control" ng-model="current_indicator.owner_role" placeholder="<%= t('.owner_role_place') %>">
     </div>
     <div class="form-group">
       <label for="expected_results"><%= t('.expected_results') %></label>
