--- a/app/views/objectives/_modal_activity.html.erb
+++ b/app/views/objectives/_modal_activity.html.erb
@@ -35,12 +35,12 @@
       <input type="date" name="scheduling" class="form-control" ng-model="current_activity.scheduling" placeholder="2000/12/24" min="1900-01-01"></input>
     </div>
     <div class="form-group">
-      <label for="outcome"><%= t('.outcome') %></label>
+      <label for="outcome"><%= t('.outcome_label') %></label>
       <select class="form-control" name="outcome_ids" multiple="multiple" ng-multiple="true" ng-model="current_activity.outcome_ids" ng-options="outcome.id as outcome.description for outcome in outcomes">
       </select>
     </div>
     <div class="form-group">
-      <label for="ask">Petición</label>
+      <label for="ask"><%= t('.ask_label') %></label>
       <select class="form-control" name="ask_ids" multiple="multiple" ng-multiple="true" ng-model="current_activity.ask_ids" ng-options="ask.id as ask.description for ask in asks">
       </select>
     </div>
