--- a/app/views/projects/stage2.html.erb
+++ b/app/views/projects/stage2.html.erb
@@ -74,12 +74,12 @@
                 <thead>
                   <tr>
                     <th><%= t('.objectives') %></th>
-                    <th><%= t('.subtotal_key_contribution') %></th>
-                    <th><%= t('.subtotal_momentum') %></th>
-                    <th><%= t('.subtotal_comparative_advantage') %></th>
-                    <th><%= t('.total') %></th>
-                    <th><%= t('.prioritized') %></th>
-                    <th><%= t('.policy_solutions') %></th>
+                    <th class="text-center"><%= t('.subtotal_key_contribution') %></th>
+                    <th class="text-center"><%= t('.subtotal_momentum') %></th>
+                    <th class="text-center"><%= t('.subtotal_comparative_advantage') %></th>
+                    <th class="text-center"><%= t('.total') %></th>
+                    <th class="text-center"><%= t('.prioritized') %></th>
+                    <th class="text-center"><%= t('.policy_solutions') %></th>
                     <th class="text-right"><%= t('.actions') %></th>
                   </tr>
                 </thead>
