arreglo parcial issue #16

--- a/app/views/projects/_real_problem_modal.html.erb
+++ b/app/views/projects/_real_problem_modal.html.erb
@@ -1,16 +1,16 @@
 <script type="text/ng-template" id="aside.html">
 	<div class="modal-header">
-		<h3 class="modal-title">Real Problem</h3>
+		<h3 class="modal-title">Problema Real</h3>
 	</div>
 	<div class="modal-body">
 		<form>
 			<div class="form-group">
-				<label for="title">Title</label>
-				<input type="text" name="title" class="form-control" ng-model="problem.title" placeholder="Enter a title for a problem">
+				<label for="title">Título</label>
+				<input type="text" name="title" class="form-control" ng-model="problem.title" placeholder="Ingrese el título del problema">
 			</div>
 			<div class="form-group">
-				<label for="description">Description</label>
-				<textarea name="description" class="form-control textarea-400" ng-model="problem.description" placeholder="Enter a description for a problem" style="height: 250px"></textarea>
+				<label for="description">Descripción</label>
+				<textarea name="description" class="form-control textarea-400" ng-model="problem.description" placeholder="Ingrese una descripción para el problema" style="height: 250px"></textarea>
 			</div>
 			<!--div class="form-group">
 				<label for="focus_area">Focus Area</label>
@@ -21,7 +21,7 @@
 		</form>
 	</div>
 	<div class="modal-footer">
-		<button class="btn btn-primary" ng-click="save($event)" ng-class="{disabled: problem.title == '' }">Save</button>
-		<button class="btn btn-warning" ng-click="cancel($event)">Cancel</button>
+		<button class="btn btn-primary" ng-click="save($event)" ng-class="{disabled: problem.title == '' }">Guardar</button>
+		<button class="btn btn-warning" ng-click="cancel($event)">Cancelar</button>
 	</div>
 </script>
