--- a/app/views/projects/stage2.html.erb
+++ b/app/views/projects/stage2.html.erb
@@ -94,7 +94,7 @@
                       <i class="fa fa-check" ng-if="objective.prioritized"></i>
                     </td>
                     <td class="text-center">{{objective.solution_ids.length}}</td>
-                    <td class="text-right"><a href="#" title="Editar" ng-click="add_edit_objective(objective)"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Borrar" ng-click="delete_objective(objective)"><i class="fa fa-trash"></i></a>
+                    <td class="text-right"><a href="#" title="Editar" ng-click="add_edit_objective(objective)"><i class="fa fa-pencil-square-o"></i></a> <a href="" title="Priorizar"><i class="fa fa-list-ol"></i></a> <a href="#" title="Eliminar" ng-click="delete_objective(objective)"><i class="fa fa-trash"></i></a> 
                     </td>
                   </tr>
                 </tbody>
