--- a/app/views/projects/_objective_modal.html.erb
+++ b/app/views/projects/_objective_modal.html.erb
@@ -22,7 +22,7 @@
     
     <div class="form-group">
       <label>
-        <input type="checkbox" ng-model="current_objective.prioritized"> <%= t('.prioritized') %>
+        <input type="checkbox" ng-model="current_objective.prioritized" checked> <%= t('.prioritized').html_safe %>
       </label>
     </div>
     <hr>
