--- a/app/views/projects/_overview.html.erb
+++ b/app/views/projects/_overview.html.erb
@@ -17,10 +17,10 @@
               <p><%= @real_problem.description.presence || t('.empty') %></p>
               <ul>
                 <li>
-                  Focus area: <%= @real_problem.focus_area.presence || t('.empty') %>
+                  Área de focalización: <%= @real_problem.focus_area.presence || t('.empty') %>
                 </li>
                 <li>
-                  Goal: <%= @real_problem.goal.presence || t('.empty') %>
+                  Meta: <%= @real_problem.goal.presence || t('.empty') %>
                 </li>
               </ul>
               </br>
@@ -43,7 +43,7 @@
                         <% if @solutions.nil? %>
                           <p><%= t('.uncreated') %></p>
                         <% elsif @solutions.count < 1 %>
-                          <b>Solutions</b>
+                          <b>Soluciones</b>
                           <p><%= t('.empty') %></p>
                         <% else %>
                           <% policy.solutions.each_with_index do |solution, i| %>
@@ -77,7 +77,7 @@
               <h3><%= objective.title.presence || t('.empty') %></h3>
               <p><%= objective.description.presence %></p>
               <ul style="list-style-type:disc">
-                <li>Type: </b><%= objective.objective_type.presence || t('.empty') %></li>
+                <li>Tipo: </b><%= objective.objective_type.presence || t('.empty') %></li>
               </ul>
               <!-- barriers -->
               <% if objective.barriers.nil? %>
@@ -85,7 +85,7 @@
               <% else %>
                 <% objective.barriers.each_with_index do |barrier, cnt_barrier| %>
                 <div class="separator"></div>
-                <h4>Barrier <%= cnt_barrier + 1 %>: </h4>
+                <h4>Barreras <%= cnt_barrier + 1 %>: </h4>
                   <ul style="list-style-type:disc">
                     <li><%= barrier %></li>
                   </ul>
@@ -98,7 +98,7 @@
               <% else %>
                 <% objective.enabling_factors.each_with_index do |efactor, cnt_factor| %>
                   <div class="separator"></div>
-                  <h4>Enabling factor <%= cnt_factor + 1 %>:</h4>
+                  <h4>Factores habilitantes <%= cnt_factor + 1 %>:</h4>
                   <ul style="list-style-type:disc">
                     <li><%= efactor %></li>
                   </ul>
@@ -113,14 +113,14 @@
                   <p></p>
                 <% else %>
                   <div class="separator"></div>
-                  <h4>Actors</h4>
+                  <h4>Actores</h4>
                     <% objective.actors.each_with_index do |actor, i| %>
                       <p class="blue">Actor <%= i+1 %>. <%= actor.name %></p>
                     <p><%= actor.description.presence || t('.empty') %></p>
                     <ul style="list-style-type:disc">
-                      <li><b>Actor type: </b><%= actor.actor_type.presence || t('.empty') %></li>
-                      <li><b>Support: </b><%= get_support actor.support.presence || t('.empty') %></li>
-                      <li><b>Influence: </b><%= get_influence actor.influence.presence || t('.empty') %></li>
+                      <li><b>Tipo de Actor: </b><%= actor.actor_type.presence || t('.empty') %></li>
+                      <li><b>Apoyo: </b><%= get_support actor.support.presence || t('.empty') %></li>
+                      <li><b>Influencia: </b><%= get_influence actor.influence.presence || t('.empty') %></li>
                     </ul>
                   <% end %>
                 <% end %>
@@ -134,11 +134,11 @@
                   <p></p>
                 <% else %>
                   <div class="separator"></div>
-                  <h4>Outcomes</h4>
+                  <h4>Metas Intermedias</h4>
                     <% objective.outcomes.each_with_index do |outcome, i| %>
-                      <span class='blue'>Outcome <%= i+1 %>. </span><b><%= outcome.description.presence || t('.empty') %></b>
+                      <span class='blue'>Meta Intermedia <%= i+1 %>. </span><b><%= outcome.description.presence || t('.empty') %></b>
                     <ul style="list-style-type:disc">
-                      <li>Outcome type: <%= outcome.outcome_type_id %></li>
+                      <li>Tipo de Meta Intermedia: <%= outcome.outcome_type_id %></li>
                       <!-- <li>Actor type: <%= outcome.actor_type_id %></li> -->
                     </ul>
                   <% end %>
@@ -153,9 +153,9 @@
                   <p></p>
                 <% else %>
                   <div class="separator"></div>
-                  <h4>Activities</h4>
+                  <h4>Actividades</h4>
                   <% objective.activities.each_with_index do |activity, i| %>
-                    <span class='blue'>Activity <%= i+1 %>. </span><b><%= activity.title.presence || t('.empty') %></b>
+                    <span class='blue'>Actividad <%= i+1 %>. </span><b><%= activity.title.presence || t('.empty') %></b>
                     <p><%= activity.description.presence || t('.empty') %></p>
                   <% end %>
                 <% end %>
@@ -169,12 +169,12 @@
                   <p></p>
                 <% else %>
                   <div class="separator"></div>
-                  <h4>Asks</h4>
+                  <h4>Peticiones</h4>
                   <% objective.asks.each_with_index do |ask, i| %>
-                    <span class='blue'>Ask <%= i+1 %>. </span><b><%= ask.description.presence || t('.empty') %></b>
+                    <span class='blue'>Petición <%= i+1 %>. </span><b><%= ask.description.presence || t('.empty') %></b>
                     <ul style="list-style-type:disc">
-                      <li>Related actor: <%= ask.actor.name %></li>
-                      <li>Related objective: <%= get_objective_related ask.objective_id %></li>
+                      <li>Encargado: <%= ask.actor.name %></li>
+                      <li>Objetivos Esperados: <%= get_objective_related ask.objective_id %></li>
                     </ul>
                   <% end %>
                 <% end %>
