--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -20,15 +20,15 @@
       <div role="tabpanel" class="tabpanel">
         <!-- nav tabs -->
         <ul class="nav nav-tabs" role="tablist" data-step="1" data-intro="<%= t('.step_one') %>">
-          <li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab"><%= t('.data_entry') %></a></li>
-          <li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab"><%= t('.explanation_examples') %></a></li>
+          <li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab" onclick="show_intro()"><%= t('.data_entry') %></a></li>
+          <li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab" Onclick="hide_intro()"><%= t('.explanation_examples') %></a></li>
         </ul>
         <!-- tab panes -->
         <div class="tab-content">
             <div class="project-hero">
               <h2><%= t('.title') %></h2>
               <p><%= t('.description') %></p>
-              <button class="btn btn-success" onclick="javascript:introJs().start();">
+              <button class="btn btn-success" onclick="javascript:introJs().start();" id="guide">
                 <i class="fa fa-map"></i> <%= t('.guide_me') %>
               </button>
             </div>
