--- a/app/views/projects/stage2.html.erb
+++ b/app/views/projects/stage2.html.erb
@@ -22,9 +22,9 @@
       <div role="tabpanel" class="tabpanel">
         <!-- nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
-          <li role="presentation" class="active" data-step="1" data-intro="<%= t('.step_one') %>"><a href="#data" aria-controls="data" role="tab" data-toggle="tab"><%= t('.data_entry') %></a>
+          <li role="presentation" class="active" data-step="1" data-intro="<%= t('.step_one') %>"><a href="#data" aria-controls="data" role="tab" data-toggle="tab" Onclick="show_intro()"><%= t('.data_entry') %></a>
           </li>
-          <li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab"><%= t('.explanation_examples') %></a>
+          <li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab" Onclick="hide_intro()"><%= t('.explanation_examples') %></a>
           </li>
         </ul>
 
@@ -33,7 +33,7 @@
           <div class="project-hero">
             <h2><%= t('.title') %></h2>
             <p><%= t('.description') %></p>
-            <button class="btn btn-success" onclick="javascript:introJs().start();">
+            <button class="btn btn-success" onclick="javascript:introJs().start();" id="guide">
               <i class="fa fa-map"></i> <%= t('.guide_me') %>
             </button>
           </div>
