--- a/app/views/resources/aside.html.erb
+++ b/app/views/resources/aside.html.erb
@@ -1,17 +1,27 @@
 <div class="modal-header">
-  <h3 class="modal-title"><%= t('.resource') %></h3>
+  <h3 class="modal-title">Documento</h3>
 </div>
 <div class="modal-body">
     <%= simple_form_for [@project, @resource], remote: true do |f| %>
         <%= f.error_notification %>
-        <%= f.input :title, input_html: {:"ng-model" => "current_resource.title"} %>
-        <%= f.input :description, input_html: {:"ng-model" => "current_resource.description"} %>
-        <%= f.input :link , input_html: {:"ng-model" => "current_resource.link"} %>
-        <%= f.input :tag_list , input_html: {:"ng-model" => "current_resource.tag_list"} %>
-        <%= f.input :public , input_html: {:"ng-model" => "current_resource.public"} %>
-        <%= f.button :button, class: "btn btn-success", "ng-click" => "add_resource($event)" %>
-        <button class="btn btn-warning" ng-click="cancel($event)">Cancel</button>
-    <% end %>
+    <div class="form-group">
+        <%= f.input :title, label:"Título", input_html: {:"ng-model" => "current_resource.title"} %>
+    </div>
+    <div class="form-group">
+        <%= f.input :description, label:"Descripción", input_html: {:"ng-model" => "current_resource.description"} %>
+    </div>
+    <div class="form-group">
+        <%= f.input :link , label:"Enlace al archivo", input_html: {:"ng-model" => "current_resource.link"} %>
+    </div>
+    <div class="form-group">
+        <%= f.input :tag_list , label:"Tags", input_html: {:"ng-model" => "current_resource.tag_list"} %>
+    </div>
+    <div class="form-group">
+        <%= f.input :public , label:"Archivo público", input_html: {:"ng-model" => "current_resource.public"} %>
+    </div>        
 </div>
 <div class="modal-footer">
+    <%= f.button :button, class: "btn btn-primary", "ng-click" => "add_resource($event)" %>
+        <button class="btn btn-warning" ng-click="cancel($event)">Cancelar</button>
+    <% end %>
 </div>
