DEMO: ingreso traducciones, homologación índex, nuevos estilos

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -38,6 +38,9 @@ table .fa-pencil-square-o, table .fa-trash, table .fa-line-chart, table .fa-cale
 .mini-explicacion{
   font-size: 12px;
 }
+.h500 {
+  height: 300px;
+}
 
 /*BUTTONS */
 
