--- a/app/views/demo/show.html.erb
+++ b/app/views/demo/show.html.erb
@@ -9,9 +9,6 @@
   </div>
 <% end %>
 
-<h2><%= @project.title %></h2>
-<p><%= @project.description %></p>
-<hr>
 <div role="tabpanel">
   <ul class="nav nav-tabs" role="tablist" data-step="3" data-intro="<%= t('.step_three') %>">
     <li role="presentation" class="active"><a href="#stages" aria-controls="stages" role="tab" data-toggle="tab"><%= t('.stages') %></a></li>
@@ -19,15 +16,25 @@
     <li role="presentation"><a href="#documents" aria-controls="documents" role="tab" data-toggle="tab"><%= t('.documents') %></a></li>
     <li role="presentation"><a href="#overview" aria-controls="overview" role="tab" data-toggle="tab"><%= t('.overview') %></a></li>
   </ul>
+  
+
+  <div class="project-hero02">
+    <h2><%= @project.title %></h2>
+    <p><%= @project.description %></p>
+    <button class="btn btn-success" onclick="javascript:introJs().start();">
+      <i class="fa fa-map"></i> Guíame
+    </button>
+  </div>
 
   <!-- tab panes -->
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="stages">
       <div data-step="4" data-intro="<%= t('.step_four') %>">
         <div class="">
+          <h3 class="mb50">Etapa 1: Identificar el problema y los objetivos políticos a lograr</h3>
           <div class="panel panel-default">
             <div class="panel-heading">
-              <h4 class="panel-title" title="Complete Stage"><a data-toggle="collapse" href="#stage1" aria-expanded="false" aria-controls="collapseExample"><i class="<%= icon_class_stage 1 %>"></i> Stage 1: Articulate problems and policy solutions</a></h4>
+              <h4 class="panel-title" title="Complete Stage"><a data-toggle="collapse" href="#stage1" aria-expanded="false" aria-controls="collapseExample"><i class="<%= icon_class_stage 1 %>"></i> Step 1: Describa el problema y la correspondiente solución de política pública</a></h4>
             </div>
             <div class="collapse steps in" id="stage1">
               <table class="table">
@@ -69,7 +76,7 @@
         <div class="">
           <div class="panel panel-default">
             <div class="panel-heading">
-              <h4 class="panel-title" title="You must complete the previous stage"><a data-toggle="collapse" href="#stage2" aria-expanded="false" aria-controls="collapseExample"><i class="<%= icon_class_stage 2 %>"></i> Stage 2: Articulate and prioritize objectives (Example)</a></h4>
+              <h4 class="panel-title" title="You must complete the previous stage"><a data-toggle="collapse" href="#stage2" aria-expanded="false" aria-controls="collapseExample"><i class="<%= icon_class_stage 2 %>"></i> Step 2: Formular los objetivos y ordenarlos en orden de prioridad</a></h4>
             </div>
             <div class="collapse steps" id="stage2">
               <table class="table">
@@ -87,7 +94,7 @@
         </div>
       </div>
       <hr>
-      <h4 class="title_goals">Stage 3: Set Goals</h4>
+      <h3 class="mb50">Etapa 2 : El Plan para cada uno de sus Objetivos de política priorizados en detalle</h3>
     </div>
     <div role="tabpanel" class="tab-pane" id="dashboard">...</div>
     <div role="tabpanel" class="tab-pane" id="documents">
