--- a/app/views/demo/stage1.html.erb
+++ b/app/views/demo/stage1.html.erb
@@ -17,22 +17,27 @@
         <button ng-click="dismiss_modal()" type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         {{ messages.message }}
       </div>
-
-      <h2><%= t('.title') %></h2>
-      <p><%= t('.description') %></p>
       <div role="tabpanel" class="tabpanel">
         <!-- nav tabs -->
         <ul class="nav nav-tabs" role="tablist" data-step="5" data-intro="<%= t('.step_five') %>">
           <li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab"><%= t('.data_entry') %></a></li>
           <li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab"><%= t('.explanation_examples') %></a></li>
         </ul>
+
+      <div class="project-hero">
+        <h2><%= t('.title') %></h2>
+        <p><%= t('.description') %></p>
+        <button class="btn btn-success">
+          <i class="fa fa-map"></i> Guíame
+        </button>
+      </div>
         <!-- tab panes -->
         <div class="tab-content">
           <div role="tabpanel" class="tab-pane active" id="data" data-step="6" data-intro="<%= t('.step_six') %>" data-position="top">
             <div class="bg_grey" id='real-problem'>
               <!-- <button type="button" class="btn btn-warning pull-right">Edit</button> -->
               <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" data-title="<%= t('.subtitle1_tooltip') %>"><i class="fa fa-info"></i></button>
-              <button type="button" class="btn pull-right" ng-class="{'btn-warning': problem.id, 'btn-warning': !problem.id}" ng-click="add_step_one(problem)">{{ btn_problem }}</button>
+              <button type="button" class="btn pull-right btn-warning ng-binding"><i class="fa fa-pencil" ng-class="{'fa-pencil': problem.id, 'fa-pencil': !problem.id}"></i> Editar</button>
               <h4><i class="fa fa-circle"></i> <%= t('.subtitle1') %></h4>
             </div>
             <div class="contenedor">
@@ -71,6 +76,7 @@
               </div>
               <!-- policy solutions -->
               <div class="collapse in" id="objetive-<%= pp.id %>">
+                <button type="button" class="btn btn-primary pull-right" onmouseenter="$(this).tooltip('show')" data-toggle="tooltip" data-placement="left" data-title="Las soluciones de política pública se refieren principalmente a: El desarrollo de políticas, Establecimiento de un tema en la agenda política, Adopción de políticas públicas, Bloqueo de políticas públicas, Implementación de políticas públicas, Mantenimiento de políticas públicas, Entre otros." data-original-title="" title=""><i class="fa fa-info"></i></button>
                 <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_solution(policy.id)"><i class="fa fa-plus-circle"></i> <%= t('.add_button') %></button>
                 <h4><%= t('.subtitle3') %> <span ng-if="policy.solutions"><i class="fa fa-info-circle" data-toggle="tooltip" data-placement="left" data-title="<%= t('.subtitle3_tooltip') %>"></i></span></h4>
                 <p ng-if="policy.solutions.length == 0">
