corrección error css y traducción demo

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -39,7 +39,7 @@ table .fa-pencil-square-o, table .fa-trash, table .fa-line-chart, table .fa-cale
   font-size: 12px;
 }
 .h500 {
-  height: 300px;
+  min-height: 300px;
 }
 
 /*BUTTONS */
