--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -39,7 +39,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> <%= t('.navbar_dropdown_welcome') %> <%= current_user.email %> <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li>
-                  <a href="/users/edit"><%= t('.navbar_dropdown_my_account') %></a>
+                  <a href="/users/edit" target="_self"><%= t('.navbar_dropdown_my_account') %></a>
                 </li>
                 <li class="divider"></li>
                 <li>
