--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -547,6 +547,12 @@ div#resources_paginate {
   padding-top: 100px;
   padding-bottom: 100px;
 }
+
+.testimonial h2 {
+  color: #ffffff;
+  text-align: center;
+  margin-bottom: 40px;
+}
 .testimonial p.cita {
   font-size: 20px;
   font-weight: 400;
