--- a/app/views/objectives/stage6.html.erb
+++ b/app/views/objectives/stage6.html.erb
@@ -65,7 +65,7 @@
                     </thead>
                     <tbody>
                       <tr ng-repeat="m in ask.messages track by $index">
-                        <td>{{m.message}}</td>
+                        <td>{{m.description}}</td>
                         <td>
                           <ul class="list-inline">
                             <li ng-repeat="a in m.actors">
