--- a/app/views/objectives/_msj_modal.html.erb
+++ b/app/views/objectives/_msj_modal.html.erb
@@ -6,7 +6,7 @@
     <form>
       <div class="form-group">
         <label for="message"><%= t('.Mensaje') %></label>
-        <textarea name="message" class="form-control" rows="3" ng-model="current_msj.message" placeholder="<%= t('.ask_placeholder') %>"></textarea>
+        <textarea name="message" class="form-control" rows="3" ng-model="current_msj.description" placeholder="<%= t('.ask_placeholder') %>"></textarea>
       </div>
       <div class="form-group">
         <select name="actors" multiple ng-options="actor.name for actor in actors track by actor.id" ng-model="current_msj.actors"></select>
