--- a/app/views/objectives/stage6.html.erb
+++ b/app/views/objectives/stage6.html.erb
@@ -51,7 +51,7 @@
               <div class="panel-body">
                 <div class="collapse in">
                   <button type="button" class="btn btn-primary pull-right" onmouseenter="$(this).tooltip('show')" data-toggle="tooltip" data-placement="left" data-title="title"><i class="fa fa-info"></i></button>
-                    <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_policy()"><i class="fa fa-plus-circle"></i> Agregar</button>
+                    <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_msj(ask)"><i class="fa fa-plus-circle"></i> Agregar</button>
                   <h4>Cuál es la bajada comunicacional de una petición para transmitir la idea central del resultado  intermedio según el o los actores a los que te enfrentes?</h4>
 
                   <table class="table">
