--- a/app/views/objectives/stage5.html.erb
+++ b/app/views/objectives/stage5.html.erb
@@ -12,7 +12,7 @@
 
 <div class="container main">
   <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-controller="stage5Ctrl" data-errorgettingoutcomes="<%= t('.error_getting_outcomes') %>" data-errorgettingasks="<%= t('.error_getting_asks') %>" data-errorgettingactivities="<%= t('.error_getting_activities') %>" data-errorupdatingactivity="<%= t('.error_updating_activity') %>" data-errorcreatingactivity="<%= t('.error_creating_activity') %>" data-confirmdeleteactivity="<%= t('.confirm_delete_activity') %>">
+    <div id="main_alerts" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-controller="stage5Ctrl" data-errorgettingoutcomes="<%= t('.error_getting_outcomes') %>" data-errorgettingasks="<%= t('.error_getting_asks') %>" data-errorgettingactivities="<%= t('.error_getting_activities') %>" data-errorupdatingactivity="<%= t('.error_updating_activity') %>" data-errorcreatingactivity="<%= t('.error_creating_activity') %>" data-confirmdeleteactivity="<%= t('.confirm_delete_activity') %>">
       <div class="alert" role="alert" ng-class="messages.response?'alert-success':'alert-danger'" ng-if="messages.message">
         <button ng-click="dismiss_modal()" type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         {{ messages.message }}
