--- a/app/views/objectives/stage6.html.erb
+++ b/app/views/objectives/stage6.html.erb
@@ -12,7 +12,7 @@
 
 <div class="container main">
   <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-controller="stage6Ctrl" data-errorgettingactors="<%= t('.error_getting_actors') %>" data-errorgettingasks="<%= t('.error_getting_asks') %>" data-errorupdatingask="<%= t('.error_updating_ask') %>" data-errorcreatingask="<%= t('.error_creating_ask') %>" data-confirmdeleteask="<%= t('.confirm_delete_ask') %>">
+    <div id="main_alerts" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ng-controller="stage6Ctrl" data-errorgettingactors="<%= t('.error_getting_actors') %>" data-errorgettingasks="<%= t('.error_getting_asks') %>" data-errorupdatingask="<%= t('.error_updating_ask') %>" data-errorcreatingask="<%= t('.error_creating_ask') %>" data-confirmdeleteask="<%= t('.confirm_delete_ask') %>">
       <div class="alert" role="alert" ng-class="messages.response?'alert-success':'alert-danger'" ng-if="messages.message">
         <button ng-click="dismiss_modal()" type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         {{ messages.message }}
