--- a/app/views/objectives/_msj_modal.html.erb
+++ b/app/views/objectives/_msj_modal.html.erb
@@ -1,18 +1,19 @@
 <script type="text/ng-template" id="add-msj.html">
   <div class="modal-header">
-    <h3 class="modal-title"><%= t('.Mensaje') %></h3>
+    <h3 class="modal-title"><%= t('.menssage') %></h3>
   </div>
   <div class="modal-body">
     <form>
       <div class="form-group">
-        <label for="message"><%= t('.Mensaje') %></label>
-        <textarea name="message" class="form-control" rows="3" ng-model="current_msj.description" placeholder="<%= t('.ask_placeholder') %>"></textarea>
+        <label for="message"><%= t('.menssage') %></label>
+        <textarea name="message" class="form-control" rows="3" ng-model="current_msj.description" placeholder="<%= t('.menssage_placeholder') %>"></textarea>
       </div>
       <div class="form-group">
-        <select name="actors" multiple ng-options="actor.id as actor.name for actor in actors track by actor.id" ng-model="current_msj.actors"></select>
+        <label for="actors"><%= t('.actors') %></label>
+        <select name="actors" multiple ng-options="actor.id as actor.name for actor in actors track by actor.id" ng-model="current_msj.actors" class="form-control"></select>
       </div>
       <div class="form-group">
-        <label for="executed">Ejecutado </label>
+        <label for="executed"><%= t('.executed') %></label>
           <input name="executed" type="checkbox" id="executed" ng-model="current_msj.executed">
       </div>
     </form>
